fix: Add a green background, rounded corners, change the color of the text, adjusted spacing.

--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -92,11 +92,11 @@
   --color-th-dark-900: oklch(0.13 0.01 51);
 
   --color-brand-green: oklch(0.38 0.07 178);
-  --color-brand-green-text: var(--color-light-100);
+  --color-brand-green-text: var(--color-th-light-100);
   --color-brand-yellow: oklch(0.9 0.12 90);
-  --color-brand-yellow-text: var(--color-dark-900);
+  --color-brand-yellow-text: var(--color-th-dark-900);
   --color-brand-red: oklch(0.57 0.21 25);
-  --color-brand-red-text: var(--color-light-900);
+  --color-brand-red-text: var(--color-th-light-900);
 
   --color-brand-green-500: var(--color-brand-green);
 
